add pinned saved views
